fix dialog overflow

--- a/components/dialogs/crs-dialog/crs-dialog.css
+++ b/components/dialogs/crs-dialog/crs-dialog.css
@@ -75,3 +75,7 @@ header {
     width: 100vw !important;
     height: 100vh !important;
 }
+
+.overflow {
+    overflow: auto;
+}
